# central_manager

./: Makefile  pyproject.toml  pyrightconfig.json  ruff.toml
cm/commands/: __init__.py  __main__.py  git.py  main.py
cm/services/: __init__.py  containers.py
cm/services/github/: __init__.py  config.py  core.py
data/: config.json
